@@ -1,2 +1,5 @@
-MD5 b703b21ebb2b24bb403ed3a7dc31bc9e libticables-3.6.3.ebuild 598
+MD5 6e34d67ca234c2754cae12ecbc0a344c libticables-3.6.3.ebuild 709
+MD5 51f9fc6fce4640df7ebfe1b99e05c170 ChangeLog 399
+MD5 6acc716fc539fbb1de9e4ad6d31154ce libticables-3.7.2.ebuild 696
 MD5 85ff2a5a3e6e85470b9b10a6eb8f6743 files/digest-libticables-3.6.3 69
+MD5 dc2cbdbec6fca3427cee346b154971a5 files/digest-libticables-3.7.2 69
