@@ -1,2 +1,5 @@
-MD5 9d9a0ae7e0e3eae45bbad1c578e78251 libtifiles-0.4.2.ebuild 637
+MD5 27ceb3cf527c24751e21d8feee775d68 libtifiles-0.4.2.ebuild 738
+MD5 e3521492230d9544695fa1d378f77362 ChangeLog 395
+MD5 d627ab62a25756215edd64bda18406df libtifiles-0.5.1.ebuild 726
 MD5 a7c2068dcd354d51d3c8c08cf9067a24 files/digest-libtifiles-0.4.2 68
+MD5 5328c930ca02a31b7cbb3acb71b01a1b files/digest-libtifiles-0.5.1 68
