@@ -1,7 +1,12 @@
 # ChangeLog for dev-libs/libticalcs
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticalcs/Attic/ChangeLog,v 1.1 2003/07/20 05:26:02 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticalcs/Attic/ChangeLog,v 1.2 2003/07/20 05:34:32 rphillips Exp $
 
+*libticalcs-4.4.3 (19 Jul 2003)
+
+  19 Jul 2003; Ryan Phillips <rphillips@gentoo.org> libticalcs-4.4.3.ebuild:
+  new version
+  
 *libticalcs-4.3.0 (19 Jul 2003)
 
   19 Jul 2003; Ryan Phillips <rphillips@gentoo.org> libticalcs-4.3.0.ebuild:
