@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libtifiles
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtifiles/Attic/ChangeLog,v 1.1 2003/07/20 05:27:48 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtifiles/Attic/ChangeLog,v 1.2 2003/07/20 05:33:16 rphillips Exp $
+
+*libtifiles-0.5.1 (19 Jul 2003)
+
+  19 Jul 2003; Ryan Phillips <rphillips@gentoo.org> libtifiles-0.5.1.ebuild:
+  updated version
 
 *libtifiles-0.4.2 (19 Jul 2003)
 
